src/evaluator/expression/string/tests/snapshots/monkey_interpreter__evaluator__expression__string__tests__test_evaluator_string_nodes_case2.snap
---
source: src/evaluator/expression/string/tests/mod.rs
expression: "evaluator.evaluate(crate::syntax_analysis::SyntaxAnalysis::from(crate::lexical_analysis::LexicalAnalysis::from(code).unwrap()).unwrap())"

---
Ok(
    String {
        value: "line1\nline2\n",
    },
)
